--- a/shells/onstage.html
+++ b/shells/onstage.html
@@ -1,133 +1,29 @@
 <!DOCTYPE html>
+
 <meta charset="utf8">
 <title>DZSlides</title>
 
-<script>
-  function $(query) { return document.querySelector(query)}
-  function $$(query) { return document.querySelectorAll(query)}
-  NodeList.prototype.forEach = function(fun) {
-    if (typeof fun !== "function") throw new TypeError();
-    for (var i = 0; i < this.length; i++) {
-      fun.call(this, this[i]);
-    }
-  }
-  var views = {}, notes, url, idx = 1;
+<div id="present">
+  <iframe></iframe>
+</div>
 
-  function getURL() {
-    var u = window.location.hash.split("#")[1];
-    if (!u) {
-      u = window.prompt("What is the URL of the slides?");
-      if (u) {
-        window.location.hash = u.split("#")[0];
-        return u;
-      }
-      u= "<style>body{background-color:white;color:black}</style>";
-      u+= "<strong>ERROR:</strong> No URL specified.<br>"
-      u+= "Try<em>: " + document.location + "#yourslides.html</em>"
-      u= "data:text/html," + encodeURIComponent(u);
-    }
-    return u;
-  }
+<div id="future">
+  <iframe></iframe>
+</div>
 
-  window.onload = function() {
-    var iframes = $$("iframe");
-    var operationsCount = iframes.length;
-    url = getURL();
-    iframes.forEach(function(f) {
-      f.onload = function() {
-        operationsCount--;
-        if (operationsCount == 0) {
-          iframesLoaded();
-        }
-      }
-      f.src = url;
-    });
-    function iframesLoaded() {
-      views.present = $("#present > iframe").contentWindow;
-      views.future = $("#future > iframe").contentWindow;
-      views.present.postMessage("register", "*");
-    }
-    notes = $("#notes > #content");
-    startClock();
-  }
-  window.onhashchange = window.onload;
+<div id="slideidx" onclick="Dz.setSlide(prompt('Go to slide...','1'));">?</div>
+<div id="nextslideidx">?</div>
 
-  window.onmessage = function(e) {
-    if (e.source === views.present) {
-      var args = JSON.parse(e.data);
-      if (args.method === "newslide") {
-        idx = ~~args.idx;
-        notes.innerHTML = args.details
-        $$(".slideidx").forEach(function(p) {p.innerHTML = idx;});
-        $$(".nextslideidx").forEach(function(p) {p.innerHTML = idx + 1;});
-        views.future.postMessage("setSlide(" + (idx + 1) + ")", "*");
-        if (views.remote) views.remote.postMessage("setSlide(" + idx + ")", "*");
-      }
-      if (args.method === "registered") {
-        $$(".slidecount").forEach(function(p) {p.innerHTML = args.count;});
-      }
-    }
-  }
+<div id="notes">
+  <p id="content"></p>
+</div>
 
-  function back() {views.present.postMessage("back", "*"); }
-  function forward() {views.present.postMessage("forward", "*"); }
-  function setSlide(i) {views.present.postMessage("setSlide(" + i + ")", "*"); }
+<div id="slidecount">?</div>
+<button id="popup-button" onclick="Dz.popup()">Pop-up</button>
 
-  function toggleContent() {
-    views.present.postMessage("toggleContent", "*");
-    views.remote.postMessage("toggleContent", "*");
-  }
-
-  window.onkeydown = function(e) {
-    // Don't intercept keyboard shortcuts
-    if (e.altKey || e.ctrlKey || e.metaKey || e.shiftKey) {
-      return;
-    }
-    if ( e.keyCode == 37 // left arrow
-      || e.keyCode == 33 // page up
-    ) {
-      e.preventDefault();
-      back();
-    }
-    if ( e.keyCode == 39 // right arrow
-      || e.keyCode == 34 // page down
-    ) {
-      e.preventDefault();
-      forward();
-    }
-    if ( e.keyCode == 32) {
-      e.preventDefault();
-      toggleContent();
-    }
-
-  }
-  function startClock() {
-    setInterval(function() {
-      var now = new Date();
-      var hoursElt = $("#hours");
-      var minutesElt = $("#minutes");
-      var secondsElt = $("#seconds");
-      hours = now.getHours();
-      minutes = now.getMinutes();
-      seconds = now.getSeconds();
-      if (hours < 10) hours = "0" + hours;
-      if (minutes < 10) minutes = "0" + minutes;
-      if (seconds < 10) seconds = "0" + seconds;
-      hoursElt.innerHTML = hours;
-      minutesElt.innerHTML = minutes;
-      secondsElt.innerHTML = seconds;
-    }, 1000);
-  }
-
-  function openSlides() {
-    var windowObjectReference;
-    document.body.classList.add("slidesopen");
-    var strWindowFeatures = "resizable=yes";
-    views.remote = window.open(url + "#" + idx, "slides", strWindowFeatures);
-  }
-</script>
-
-<link href='http://fonts.googleapis.com/css?family=Copse' rel='stylesheet' type='text/css'>
+<div id="time">
+  <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
+</div>
 
 <style>
   html, body {
@@ -194,9 +90,9 @@
     width: 100%;
   }
 
-  .slideidx,
-  .nextslideidx, 
-  .slidecount {
+  #slideidx,
+  #nextslideidx, 
+  #slidecount {
     background: #888;
     font-size: 40px;
     font-weight: bold;
@@ -208,14 +104,14 @@
     z-index: 10;
   }
 
-  .slideidx,
-  .nextslideidx {
+  #slideidx,
+  #nextslideidx {
     border-bottom: 4px solid #555;
     bottom: 230px;
     width: 80px;
   }
 
-  .slideidx {
+  #slideidx {
     border-right: 4px solid #555;
     border-top-left-radius: 10px;
     cursor: pointer;
@@ -223,14 +119,14 @@
     right: 50%;
   }
 
-  .nextslideidx {
+  #nextslideidx {
     border-left: 4px solid #555;
     border-top-right-radius: 10px;
     left: 50%;
     padding-right: 4px;
   }
 
-  .slidecount {
+  #slidecount {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     border-top: 4px solid #555;
@@ -254,29 +150,181 @@
     width: 200px;
     z-index: 10;
   }
-
-  .slidesopen #present button {
-    display: none;
-  }
 </style>
-<div id="present">
-  <iframe></iframe>
-</div>
 
-<div id="future">
-  <iframe></iframe>
-</div>
+<script>
+  var Dz = {
+    views: {},
+    notes: null,
+    url: null,
+    idx: 1
+  };
+  
+  Dz.init = function() {
+    this.startClock();
+    this.loadIframes();
+  }
+  
+  Dz.onkeydown = function(aEvent) {
+    // Don't intercept keyboard shortcuts
+    if (aEvent.altKey
+      || aEvent.ctrlKey
+      || aEvent.metaKey
+      || aEvent.shiftKey) {
+      return;
+    }
+    if ( aEvent.keyCode == 37 // left arrow
+      || aEvent.keyCode == 38 // up arrow
+      || aEvent.keyCode == 33 // page up
+    ) {
+      aEvent.preventDefault();
+      this.back();
+    }
+    if ( aEvent.keyCode == 39 // right arrow
+      || aEvent.keyCode == 40 // down arrow
+      || aEvent.keyCode == 34 // page down
+    ) {
+      aEvent.preventDefault();
+      this.forward();
+    }
+    if (aEvent.keyCode == 32) { // space
+      aEvent.preventDefault();
+      this.toggleContent();
+    }
+  }
+  
+  Dz.onmessage = function(aEvent) {
+    if (aEvent.source === this.views.present) {
+      var args = JSON.parse(aEvent.data);
+      if (args.method === "newslide") {
+        this.idx = ~~args.idx;
+        $("#notes > #content").innerHTML = this.notes = args.details
+        $("#slideidx").innerHTML = this.idx;
+        $("#nextslideidx").innerHTML = this.idx + 1;
+        this.views.future.postMessage("setSlide(" + (this.idx + 1) + ")", "*");
+        if (this.views.remote)
+          this.views.remote.postMessage("setSlide(" + this.idx + ")", "*");
+      }
+      if (args.method === "registered") {
+        $("#slidecount").innerHTML = args.count;
+      }
+    }
+  }
+  
+  /* Get url from hash or prompt and store it */
+  
+  Dz.getUrl = function() {
+    var u = window.location.hash.split("#")[1];
+    if (!u) {
+      u = window.prompt("What is the URL of the slides?");
+      if (u) {
+        window.location.hash = u.split("#")[0];
+        return u;
+      }
+      u = "<style>body{background-color:white;color:black}</style>";
+      u += "<strong>ERROR:</strong> No URL specified.<br>";
+      u += "Try<em>: " + document.location + "#yourslides.html</em>";
+      u = "data:text/html," + encodeURIComponent(u);
+    }
+    return u;
+  }
+  
+  Dz.loadIframes = function() {
+    var present = $("#present iframe");
+    var future = $("#future iframe");
+    present.src = future.src = this.url = this.getUrl();
+    present.onload = future.onload = function() {
+      var id = this.parentElement.id;
+      Dz.views[id] = this.contentWindow;
+      if (id == 'present' && Dz.views.present)
+        Dz.views.present.postMessage("register", "*");
+    }
+  }
+  
+  Dz.toggleContent = function() {
+    this.views.present.postMessage("toggleContent", "*");
+    if (this.views.remote)
+      this.views.remote.postMessage("toggleContent", "*");
+  }
+  
+  Dz.onhashchange = function() {
+    this.loadIframe();
+  }
+  
+  Dz.back = function() {
+    this.views.present.postMessage("back", "*");
+  }
 
-<div class="slideidx" onclick="var gotoidx=prompt('Go to slide...','1');setSlide(gotoidx);">?</div>
-<div class="nextslideidx">?</div>
+  Dz.forward = function() {
+    this.views.present.postMessage("forward", "*");
+  }
 
-<div id="notes">
-  <p id="content"></p>
-</div>
+  Dz.setSlide = function(aIdx) {
+    this.views.present.postMessage("setSlide(" + aIdx + ")", "*");
+  }
 
-<div class="slidecount">?</div>
-<button id="popup-button" onclick="openSlides()">Pop-up</button>
+  Dz.popup = function() {
+    this.views.remote = window.open(this.url + "#" + this.idx, 'slides', 'width=800,height=600,personalbar=0,toolbar=0,scrollbars=1,resizable=1');
+  }
+  
+  Dz.startClock = function() {
+    var addZero = function(num) {
+      return num < 10 ? '0' + num : num;
+    }
+    setInterval(function() {
+      var now = new Date();
+      $("#hours").innerHTML = addZero(now.getHours());
+      $("#minutes").innerHTML = addZero(now.getMinutes());
+      $("#seconds").innerHTML = addZero(now.getSeconds());
+    }, 1000);
+  }
+  
+  window.onload = Dz.init.bind(Dz);
+  window.onkeydown = Dz.onkeydown.bind(Dz);
+  window.onhashchange = Dz.loadIframes.bind(Dz);
+  window.onmessage = Dz.onmessage.bind(Dz);
+</script>
 
-<div id="time">
-  <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
-</div>
+
+<script> // Helpers
+  if (!Function.prototype.bind) {
+    Function.prototype.bind = function (oThis) {
+
+      // closest thing possible to the ECMAScript 5 internal IsCallable
+      // function 
+      if (typeof this !== "function")
+      throw new TypeError(
+        "Function.prototype.bind - what is trying to be fBound is not callable"
+      );
+
+      var aArgs = Array.prototype.slice.call(arguments, 1),
+          fToBind = this,
+          fNOP = function () {},
+          fBound = function () {
+            return fToBind.apply( this instanceof fNOP ? this : oThis || window,
+                   aArgs.concat(Array.prototype.slice.call(arguments)));
+          };
+
+      fNOP.prototype = this.prototype;
+      fBound.prototype = new fNOP();
+
+      return fBound;
+    };
+  }
+
+  var $ = (HTMLElement.prototype.$ = function(aQuery) {
+    return this.querySelector(aQuery);
+  }).bind(document);
+
+  var $$ = (HTMLElement.prototype.$$ = function(aQuery) {
+    return this.querySelectorAll(aQuery);
+  }).bind(document);
+
+  NodeList.prototype.forEach = function(fun) {
+    if (typeof fun !== "function") throw new TypeError();
+    for (var i = 0; i < this.length; i++) {
+      fun.call(this, this[i]);
+    }
+  }
+
+</script>
