--- a/template.html
+++ b/template.html
@@ -8,25 +8,50 @@
 
 <section>
     <!-- This is the first slide -->
-    <h1>Foobar.</h1>
+    <h1>My Presentation</h1>
     <footer>by John Doe</footer>
 </section>
 
 <section>
-    <h2>Foo?</h2>
+    <h2>Part one</h2>
 </section>
 
 <section>
-    <h3>No, bar!</h3>
-    <ul>
-        <li>Text
-        <li>Images
-        <li>Videos
+    <h3>An incremental list</h3>
+    <ul class="incremental">
+      <li>Item 1
+      <li>Item 2
+      <li>Item 3
     </ul>
 </section>
 
+<section>
+  <q>
+    Soothe us with sweet lies. Is that a cooking show? No! I want to
+    live! There are still too many things I don't own!
+  </q>
+</section>
+
+<section>
+    <h2>Part two</h2>
+</section>
+
+<section>
+    <h3>An image</h3>
+    <img src="http://placekitten.com/g/800/600">
+</section>
+
+<section>
+    <h3>A video</h3>
+    <video src="http://videos-cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm"></video>
+</section>
+
+<section>
+    <h2>End!</h2>
+</section>
+
 <!-- Your Style -->
-<!-- Define the style of you presentation -->
+<!-- Define the style of your presentation -->
 
 <!-- Maybe a font from http://www.google.com/webfonts ? -->
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
@@ -38,17 +63,45 @@
   section {
       /* The font from Google */
       font-family: 'Oswald', arial, serif;
-      font-size: 2em;
+      font-size: 40px;
   }
-  h1, h2, h3 {
-      margin-top: 50px;
-      text-align: center;
+  h1, h2 {
+    margin-top: 200px;
+    text-align: center;
+    font-size: 80px;
   }
+  h3 {
+    margin: 100px 0 50px 100px;
+  }
+
   ul {
-      margin-left: 200px;
+      margin: 50px 200px;
   }
-  a { color: #FF0066; } a:hover { text-decoration: underline; }
-  footer { position: absolute; bottom: 50px; right: 50px; }
+
+  q {
+    display: inline-block;
+    width: 700px;
+    height: 600px;
+    background-color: black;
+    color: white;
+    font-size: 60px;
+    padding: 50px;
+  }
+
+  img, video {
+    width: 800px;
+    height: 600px;
+    position: absolute;
+    top: 0;
+    background-color: black;
+    z-index: -1;
+  }
+
+  footer {
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+  }
 
   /* Transition effect */
   /* Feel free to change the transition effect for original
@@ -68,16 +121,33 @@
   section[aria-selected] { left: 0; }
   /* After */
   section[aria-selected] ~ section { left: +150%; }
+
+  /* Incremental elements */
+
+  /* By default, visible */
+  .incremental > * { opacity: 1; }
+
+  /* The current item */
+  .incremental > *[aria-selected] { color: red; opacity: 1; }
+
+  /* The items to-be-selected */
+  .incremental > *[aria-selected] ~ * { opacity: 0.2; }
+
 </style>
 
-
-<!-- {{{{ *****************  DZSlides CORE 2.0b1 *************************** -->
-<!-- *********************************************************************** -->
-<!-- *********************************************************************** -->
-<!-- *********************************************************************** -->
-<!-- *********************************************************************** -->
-
-<!-- This block of code is not supposed to be edited, but if you want to change the behavior of the slides, feel free to hack it ;) -->
+<!-- {{{{ dzslides core
+#
+#
+#     __  __  __       .  __   ___  __
+#    |  \  / /__` |    | |  \ |__  /__`
+#    |__/ /_ .__/ |___ | |__/ |___ .__/ core :€
+#
+#
+# The following block of code is not supposed to be edited.
+# But if you want to change the behavior of these slides,
+# feel free to hack it!
+#
+-->
 
 <!-- Default Style -->
 <style>
@@ -89,97 +159,97 @@
     position: absolute; top: 50%; left: 50%;
     overflow: hidden;
   }
-  html {
-    overflow: hidden;
-  }
   section {
     position: absolute;
     pointer-events: none;
     width: 100%; height: 100%;
   }
   section[aria-selected] { pointer-events: auto; }
+  html { overflow: hidden; }
   body { display: none; }
   body.loaded { display: block; }
+  .incremental {visibility: hidden; }
+  .incremental[active] {visibility: visible; }
 </style>
 
 <script>
-  var friendWindows = [];
-  var idx = 1;
-  var slides;
+  var Dz = {
+    remoteWindows: [],
+    idx: -1,
+    step: 0,
+    slides: null
+  };
 
-  /* main() */
-
-  window.onload = function() {
-    slides = document.querySelectorAll("body > section");
-    onhashchange();
-    setSlide();
+  Dz.init = function() {
     document.body.className = "loaded";
-    setupTouchEvents();
-    onresize();
+    this.slides = $$("body > section");
+    this.onhashchange();
+    this.setupTouchEvents();
+    this.onresize();
   }
 
-  /* Handle keys */
-
-  window.onkeydown = function(e) {
+  Dz.onkeydown = function(aEvent) {
     // Don't intercept keyboard shortcuts
-    if (e.altKey || e.ctrlKey || e.metaKey || e.shiftKey) {
+    if (aEvent.altKey
+      || aEvent.ctrlKey
+      || aEvent.metaKey
+      || aEvent.shiftKey) {
       return;
     }
-    if ( e.keyCode == 37 // left arrow
-      || e.keyCode == 38 // up arrow
-      || e.keyCode == 33 // page up
+    if ( aEvent.keyCode == 37 // left arrow
+      || aEvent.keyCode == 38 // up arrow
+      || aEvent.keyCode == 33 // page up
     ) {
-      e.preventDefault();
-      back();
+      aEvent.preventDefault();
+      this.back();
     }
-    if ( e.keyCode == 39 // right arrow
-      || e.keyCode == 40 // down arrow
-      || e.keyCode == 34 // page down
+    if ( aEvent.keyCode == 39 // right arrow
+      || aEvent.keyCode == 40 // down arrow
+      || aEvent.keyCode == 34 // page down
     ) {
-      e.preventDefault();
-      forward();
+      aEvent.preventDefault();
+      this.forward();
     }
-    if (e.keyCode == 35) { // end
-      e.preventDefault();
-      end();
+    if (aEvent.keyCode == 35) { // end
+      aEvent.preventDefault();
+      this.goEnd();
     }
-    if (e.keyCode == 36) { // home
-      e.preventDefault();
-      start();
+    if (aEvent.keyCode == 36) { // home
+      aEvent.preventDefault();
+      this.goStart();
     }
-
-    if ( e.keyCode == 32) { // space
-        e.preventDefault();
-        toggleContent();
+    if (aEvent.keyCode == 32) { // space
+      aEvent.preventDefault();
+      this.toggleContent();
     }
   }
 
   /* Touch Events */
 
-  function setupTouchEvents() {
+  Dz.setupTouchEvents = function() {
     var orgX, newX;
     var tracking = false;
 
     var db = document.body;
-    db.addEventListener("touchstart", start, false);
-    db.addEventListener("touchmove", move, false);
+    db.addEventListener("touchstart", start.bind(this), false);
+    db.addEventListener("touchmove", move.bind(this), false);
 
-    function start(e) {
-      e.preventDefault();
+    function start(aEvent) {
+      aEvent.preventDefault();
       tracking = true;
-      orgX = e.changedTouches[0].pageX;
+      orgX = aEvent.changedTouches[0].pageX;
     }
 
-    function move(e) {
+    function move(aEvent) {
       if (!tracking) return;
-      newX = e.changedTouches[0].pageX;
+      newX = aEvent.changedTouches[0].pageX;
       if (orgX - newX > 100) {
         tracking = false;
-        forward();
+        this.forward();
       } else {
         if (orgX - newX < -100) {
           tracking = false;
-          back();
+          this.back();
         }
       }
     }
@@ -187,115 +257,238 @@
 
   /* Adapt the size of the slides to the window */
 
-  window.onresize = function() {
+  Dz.onresize = function() {
     var db = document.body;
     var sx = db.clientWidth / window.innerWidth;
     var sy = db.clientHeight / window.innerHeight;
     var transform = "scale(" + (1/Math.max(sx, sy)) + ")";
+
     db.style.MozTransform = transform;
     db.style.WebkitTransform = transform;
     db.style.OTransform = transform;
     db.style.msTransform = transform;
     db.style.transform = transform;
   }
-  function getDetails(idx) {
-    var s = document.querySelector("section:nth-of-type("+ idx +")");
-    var d = s.querySelector("details");
-    return d?d.innerHTML:"";
+
+
+  Dz.getDetails = function(aIdx) {
+    var s = $("section:nth-of-type(" + aIdx + ")");
+    var d = s.$("details");
+    return d ? d.innerHTML : "";
   }
-  window.onmessage = function(e) {
-    var msg = e.data;
-    var win = e.source;
+
+  Dz.onmessage = function(aEvent) {
+    var msg = aEvent.data;
+    var win = aEvent.source;
     if (msg === "register") {
-      friendWindows.push(win);
-      win.postMessage(JSON.stringify({method: "registered", title: document.title, count: slides.length}), "*");
-      win.postMessage(JSON.stringify({method: "newslide", details: getDetails(idx), idx: idx}), "*");
+      this.remoteWindows.push(win);
+      win.postMessage(JSON.stringify({
+        method: "registered",
+        title: document.title,
+        count: this.slides.length
+      }), "*");
+      win.postMessage(JSON.stringify({
+        method: "newslide",
+        details: this.getDetails(this.idx),
+        idx: this.idx
+      }), "*");
       return;
     }
-    if (msg === "back") back();
-    if (msg === "forward") forward();
-    if (msg === "toggleContent") toggleContent();
+    if (msg === "back") this.back();
+    if (msg === "forward") this.forward();
+    if (msg === "toggleContent") this.toggleContent();
     // setSlide(42)
     var r = /setSlide\((\d+)\)/.exec(msg);
     if (r) {
-        idx = r[1];
-        setSlide();
+        this.setCursor(r[1], 0);
     }
   }
 
-  /* If a Video is present in this new slide, play it.
-     If a Video is present in the previous slide, stop it. */
-
-  function toggleContent() {
-    var s = document.querySelector("section[aria-selected]");
+  Dz.toggleContent = function() {
+    // If a Video is present in this new slide, play it.
+    // If a Video is present in the previous slide, stop it.
+    var s = $("section[aria-selected]");
     if (s) {
-        var video = s.querySelector("video");
-        if (video) {
-            if (video.ended || video.paused) {
-                video.play();
-            } else {
-                video.pause();
-            }
+      var video = s.$("video");
+      if (video) {
+        if (video.ended || video.paused) {
+          video.play();
+        } else {
+          video.pause();
         }
+      }
     }
   }
 
-  /* If the user change the slide number in the URL bar, jump
-     to this slide. */
-
-  window.onhashchange = function(e) {
-    var newidx = ~~window.location.hash.split("#")[1];
-    if (!newidx) newidx = 1;
-    if (newidx == idx) return;
-    idx = newidx;
-    setSlide();
+  Dz.setCursor = function(aIdx, aStep) {
+    // If the user change the slide number in the URL bar, jump
+    // to this slide.
+    aStep = (aStep != 0 && typeof aStep !== "undefined") ? "." + aStep : "";
+    window.location.hash = "#" + aIdx + aStep;
   }
 
-  /* Slide controls */
-
-  function back() {
-    if (idx == 1) return;
-    idx--;
-    setSlide();
-  }
-  function forward() {
-    if (idx >= slides.length) return;
-    idx++;
-    setSlide();
-  }
-  function start() {
-    idx = 1;
-    setSlide();
-  }
-  function end() {
-    idx = slides.length;
-    setSlide();
+  Dz.onhashchange = function() {
+    var cursor = window.location.hash.split("#"),
+        newidx = 1,
+        newstep = 0;
+    if (cursor.length == 2) {
+      newidx = ~~cursor[1].split(".")[0];
+      newstep = ~~cursor[1].split(".")[1];
+    }
+    if (newidx != this.idx) {
+      this.setSlide(newidx);
+    }
+    if (newstep != this.step) {
+      this.setIncremental(newstep);
+    }
   }
 
-  function setSlide() {
-    var old = document.querySelector("section[aria-selected]");
-    var next = document.querySelector("section:nth-of-type("+ idx +")");
+  Dz.back = function() {
+    if (this.idx == 1 && this.step == 0) {
+      return;
+    }
+    if (this.step == 0) {
+      this.setCursor(this.idx - 1,
+                     this.slides[this.idx - 2].$$('.incremental > *').length);
+    } else {
+      this.setCursor(this.idx, this.step - 1);
+    }
+  }
+
+  Dz.forward = function() {
+    if (this.idx >= this.slides.length &&
+        this.step >= this.slides[this.idx - 1].$$('.incremental > *').length) {
+        return;
+    }
+    if (this.step >= this.slides[this.idx - 1].$$('.incremental > *').length) {
+      this.setCursor(this.idx + 1, 0);
+    } else {
+      this.setCursor(this.idx, this.step + 1);
+    }
+  }
+
+  Dz.goStart = function() {
+    this.setCursor(1, 0);
+  }
+
+  Dz.goEnd = function() {
+    var lastIdx = this.slides.length;
+    var lastStep = this.slides[lastIdx - 1].$$('.incremental > *').length;
+    this.setCursor(lastIdx, lastStep);
+  }
+
+  Dz.setSlide = function(aIdx) {
+    this.idx = aIdx;
+    var old = $("section[aria-selected]");
+    var next = $("section:nth-of-type("+ this.idx +")");
     if (old) {
       old.removeAttribute("aria-selected");
-      var video = old.querySelector("video");
-      if (video) { video.pause(); }
+      var video = old.$("video");
+      if (video) {
+        video.pause();
+      }
     }
     if (next) {
       next.setAttribute("aria-selected", "true");
-      var video = next.querySelector("video");
-      if (video) { video.play(); }
-    } else {
-      idx = 0;
-      for (var i = 0, l = slides.length; i < l; i++) {
-          if (slides[i].hasAttribute("aria-selected")) {
-              idx = i + 1;
-          }
+      var video = next.$("video");
+      if (video) {
+        video.play();
       }
+    } else {
+      // That should not happen
+      this.idx = -1;
+      // console.warn("Slide doesn't exist.");
     }
-    window.location.hash = idx;
-    for (var i = 0, l = friendWindows.length; i < l; i++) {
-        friendWindows[i].postMessage(JSON.stringify({method: "newslide", details: getDetails(idx), idx: idx}), "*");
+    for (var i = 0; i < this.remoteWindows.length; i++) {
+      this.remoteWindows[i].postMessage(JSON.stringify({
+        method: "newslide",
+        details: this.getDetails(this.idx),
+        idx: this.idx
+      }), "*");
     }
   }
+
+  Dz.setIncremental = function(aStep) {
+    this.step = aStep;
+    var old = this.slides[this.idx - 1].$('.incremental > *[aria-selected]');
+    if (old) {
+      old.removeAttribute('aria-selected');
+    }
+    var incrementals = this.slides[this.idx - 1].$$('.incremental');
+    if (this.step <= 0) {
+      incrementals.forEach(function(aNode) {
+        aNode.removeAttribute('active');
+      });
+      return;
+    }
+    var next = this.slides[this.idx - 1].$$('.incremental > *')[this.step - 1];
+    if (next) {
+      next.setAttribute('aria-selected', true);
+      next.parentNode.setAttribute('active', true);
+      var found = false;
+      incrementals.forEach(function(aNode) {
+        if (aNode != next.parentNode)
+          if (found)
+            aNode.removeAttribute('active');
+          else
+            aNode.setAttribute('active', true);
+        else
+          found = true;
+      });
+    } else {
+      setCursor(this.idx, 0);
+    }
+    return next;
+  }
+
+  window.onload = Dz.init.bind(Dz);
+  window.onkeydown = Dz.onkeydown.bind(Dz);
+  window.onresize = Dz.onresize.bind(Dz);
+  window.onhashchange = Dz.onhashchange.bind(Dz);
+  window.onmessage = Dz.onmessage.bind(Dz);
+</script>
+
+
+<script> // Helpers
+  if (!Function.prototype.bind) {
+    Function.prototype.bind = function (oThis) {
+
+      // closest thing possible to the ECMAScript 5 internal IsCallable
+      // function 
+      if (typeof this !== "function")
+      throw new TypeError(
+        "Function.prototype.bind - what is trying to be fBound is not callable"
+      );
+
+      var aArgs = Array.prototype.slice.call(arguments, 1),
+          fToBind = this,
+          fNOP = function () {},
+          fBound = function () {
+            return fToBind.apply( this instanceof fNOP ? this : oThis || window,
+                   aArgs.concat(Array.prototype.slice.call(arguments)));
+          };
+
+      fNOP.prototype = this.prototype;
+      fBound.prototype = new fNOP();
+
+      return fBound;
+    };
+  }
+
+  var $ = (HTMLElement.prototype.$ = function(aQuery) {
+    return this.querySelector(aQuery);
+  }).bind(document);
+
+  var $$ = (HTMLElement.prototype.$$ = function(aQuery) {
+    return this.querySelectorAll(aQuery);
+  }).bind(document);
+
+  NodeList.prototype.forEach = function(fun) {
+    if (typeof fun !== "function") throw new TypeError();
+    for (var i = 0; i < this.length; i++) {
+      fun.call(this, this[i]);
+    }
+  }
+
 </script>
 <!-- vim: set fdm=marker: }}} -->
