--- a/shells/embedder.html
+++ b/shells/embedder.html
@@ -119,6 +119,14 @@
       aEvent.preventDefault();
       this.forward();
     }
+    if (aEvent.keyCode == 35) { // end
+      aEvent.preventDefault();
+      this.goEnd();
+    }
+    if (aEvent.keyCode == 36) { // home
+      aEvent.preventDefault();
+      this.goStart();
+    }
     if (aEvent.keyCode == 32) { // space
       aEvent.preventDefault();
       this.toggleContent();
@@ -184,6 +192,14 @@
 
   Dz.forward = function() {
     this.view.postMessage("FORWARD", "*");
+  }
+
+  Dz.goStart = function() {
+    this.view.postMessage("START", "*");
+  }
+
+  Dz.goEnd = function() {
+    this.view.postMessage("END", "*");
   }
 
   Dz.setCursor = function(aCursor) {
