--- a/shells/onstage.html
+++ b/shells/onstage.html
@@ -203,23 +203,24 @@
   
   Dz.onmessage = function(aEvent) {
     if (aEvent.source === this.views.present) {
-      var msg = aEvent.data.split(" ");
-      if (msg[0] === "CURSOR") {
-        var cursor = msg[1].split(".");
+      var argv = aEvent.data.split(" "), argc = argv.length;
+      argv.forEach(function(e, i, a) { a[i] = decodeURIComponent(e) });
+      if (argv[0] === "CURSOR" && argc === 2) {
+        var cursor = argv[1].split(".");
         if (this.idx != ~~cursor[0])
-          this.views.present.postMessage("GET_NOTES", "*");
+          this.postMsg(this.views.present, "GET_NOTES");
         this.idx = ~~cursor[0];
         this.step = ~~cursor[1];
         $("#slideidx").innerHTML = this.idx;
         $("#nextslideidx").innerHTML = this.idx + 1;
-        this.views.future.postMessage("SET_CURSOR " + this.idx + "." + (this.step + 1), "*");
+        this.postMsg(this.views.future, "SET_CURSOR", this.idx + "." + (this.step + 1));
         if (this.views.remote)
-          this.views.remote.postMessage("SET_CURSOR " + msg[1], "*");
+          this.postMsg(this.views.remote, "SET_CURSOR", argv[1]);
       }
-      if (msg[0] === "NOTES")
-        $("#notes > #content").innerHTML = this.notes = msg.splice(1).join(" ");
-      if (msg[0] === "REGISTERED")
-        $("#slidecount").innerHTML = msg.pop();
+      if (argv[0] === "NOTES" && argc === 2)
+        $("#notes > #content").innerHTML = this.notes = argv[1];
+      if (argv[0] === "REGISTERED" && argc === 3)
+        $("#slidecount").innerHTML = argv[2];
     }
   }
   
@@ -249,14 +250,14 @@
       var id = this.parentNode.id;
       Dz.views[id] = this.contentWindow;
       if (id == 'present' && Dz.views.present)
-        Dz.views.present.postMessage("REGISTER", "*");
+        Dz.postMsg(Dz.views.present, "REGISTER");
     }
   }
   
   Dz.toggleContent = function() {
-    this.views.present.postMessage("TOGGLE_CONTENT", "*");
+    this.postMsg(this.views.present, "TOGGLE_CONTENT");
     if (this.views.remote)
-      this.views.remote.postMessage("TOGGLE_CONTENT", "*");
+      this.postMsg(this.views.remote, "TOGGLE_CONTENT");
   }
   
   Dz.onhashchange = function() {
@@ -264,27 +265,34 @@
   }
   
   Dz.back = function() {
-    this.views.present.postMessage("BACK", "*");
+    this.postMsg(this.views.present, "BACK");
   }
 
   Dz.forward = function() {
-    this.views.present.postMessage("FORWARD", "*");
+    this.postMsg(this.views.present, "FORWARD");
   }
 
   Dz.goStart = function() {
-    this.views.present.postMessage("START", "*");
+    this.postMsg(this.views.present, "START");
   }
 
   Dz.goEnd = function() {
-    this.views.present.postMessage("END", "*");
+    this.postMsg(this.views.present, "END");
   }
-  
+
   Dz.setCursor = function(aCursor) {
-    this.views.present.postMessage("SET_CURSOR " + aCursor, "*");
+    this.postMsg(this.views.present, "SET_CURSOR", aCursor);
   }
 
   Dz.popup = function() {
     this.views.remote = window.open(this.url + "#" + this.idx, 'slides', 'width=800,height=600,personalbar=0,toolbar=0,scrollbars=1,resizable=1');
+  }
+  
+  Dz.postMsg = function(aWin, aMsg) { // [arg0, [arg1...]]
+    aMsg = [aMsg];
+    for (var i = 2; i < arguments.length; i++)
+      aMsg.push(encodeURIComponent(arguments[i]));
+    aWin.postMessage(aMsg.join(" "), "*");
   }
   
   Dz.startClock = function() {
