Add poster attribute on video default content

--- a/template.html
+++ b/template.html
@@ -43,7 +43,7 @@
 
 <section>
     <h3>A video</h3>
-    <video src="http://videos-cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm"></video>
+    <video src="http://videos-cdn.mozilla.net/brand/Mozilla_Firefox_Manifesto_v0.2_640.webm" poster="http://www.mozilla.org/images/about/poster.jpg"></video>
 </section>
 
 <section>
