--- a/shells/embedder.html
+++ b/shells/embedder.html
@@ -146,7 +146,7 @@
         $("#forward").disabled = this.idx == this.count;
       }
       if (argv[0] === "REGISTERED" && argc === 3) {
-        $("#slidecount").innerHTML = argv[2];
+        $("#slidecount").innerHTML = this.count = argv[2];
         document.title = $("#title").innerHTML = argv[1];
       }
     }
