Fix issue #42 onstage present does not wait for future to be loaded

--- a/shells/onstage.html
+++ b/shells/onstage.html
@@ -250,7 +250,7 @@
     present.onload = future.onload = function() {
       var id = this.parentNode.id;
       Dz.views[id] = this.contentWindow;
-      if (id == 'present' && Dz.views.present)
+      if (Dz.views.present && Dz.views.future)
         Dz.postMsg(Dz.views.present, "REGISTER");
     }
   }
