Fix #41 2/2 (appearance) Shells onstage is not incremental compatible

--- a/shells/onstage.html
+++ b/shells/onstage.html
@@ -108,14 +108,13 @@
   #nextslideidx {
     border-bottom: 4px solid #555;
     bottom: 230px;
-    width: 80px;
+    padding: 0 10px;
   }
 
   #slideidx {
     border-right: 4px solid #555;
     border-top-left-radius: 10px;
     cursor: pointer;
-    padding-left: 4px;
     right: 50%;
   }
 
@@ -123,7 +122,6 @@
     border-left: 4px solid #555;
     border-top-right-radius: 10px;
     left: 50%;
-    padding-right: 4px;
   }
 
   #slidecount {
