--- a/template.html
+++ b/template.html
@@ -197,7 +197,7 @@
     -o-transform: none !important;
     -ms-transform: none !important;
   }
-  .view head, .view head > title { display: block; }
+  .view head, .view head > title { display: block }
   section {
     position: absolute;
     pointer-events: none;
@@ -206,7 +206,7 @@
   .view section {
     pointer-events: auto;
     position: static;
-    width: 800px; height: 800px;
+    width: 800px; height: 600px;
     margin: -150px -200px;
     float: left;
 
@@ -244,7 +244,7 @@
     this.onresize();
     this.setupView();
   }
-  
+
   Dz.setupParams = function() {
     var p = window.location.search.substr(1).split('&');
     p.forEach(function(e, i, a) {
@@ -329,10 +329,10 @@
     var sections = $$("section");
     var eclick   = function(j) {
       return function() {
-        if("" == html.className)
+        if(!html.classList.contains("view"))
           return;
 
-        html.className = "";
+        html.classList.remove("view");
         Dz.setCursor(j + 1);
       }
     }
@@ -532,7 +532,7 @@
     }
     return next;
   }
-  
+
   Dz.postMsg = function(aWin, aMsg) { // [arg0, [arg1...]]
     aMsg = [aMsg];
     for (var i = 2; i < arguments.length; i++)
